fix scroll on small screens

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,6 +11,8 @@ body {
 .center div {
   margin: 0;
   position: absolute;
+  padding-top: 200px;
+  padding-bottom: 50px;
   top: 40%;
   left: 50%;
   -ms-transform: translate(-50%, -50%);
